--- a/main.ui
+++ b/main.ui
@@ -53,6 +53,9 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -60,10 +63,46 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="leftMargin">
+        <number>5</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
        <item>
         <widget class="QLabel" name="icono">
+         <property name="minimumSize">
+          <size>
+           <width>26</width>
+           <height>26</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>26</width>
+           <height>26</height>
+          </size>
+         </property>
          <property name="text">
-          <string>ICONO</string>
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap>view/icon.png</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+         <property name="indent">
+          <number>-1</number>
          </property>
         </widget>
        </item>
@@ -73,7 +112,7 @@
           <string notr="true">color: rgb(255, 255, 255);</string>
          </property>
          <property name="text">
-          <string>Calculadora</string>
+          <string> Calculadora</string>
          </property>
         </widget>
        </item>
@@ -92,29 +131,157 @@
        </item>
        <item>
         <widget class="QPushButton" name="bt_minimizar">
+         <property name="minimumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+}
+
+QPushButton:hover{
+border:0px;
+background-color:rgb(139, 175, 191);
+}</string>
+         </property>
          <property name="text">
           <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/minimizar.png</normaloff>view/minimizar.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="bt_reducir">
+         <property name="minimumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+}
+
+QPushButton:hover{
+border:0px;
+background-color:rgb(139, 175, 191);
+}</string>
+         </property>
          <property name="text">
           <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/reducir.png</normaloff>view/reducir.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="bt_expandir">
+         <property name="minimumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+}
+
+QPushButton:hover{
+border:0px;
+background-color:rgb(139, 175, 191);
+}</string>
+         </property>
          <property name="text">
           <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/expandir.png</normaloff>view/expandir.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="bt_cerrar">
+         <property name="minimumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+}
+
+QPushButton:hover{
+border:0px;
+background-color:#ff0000;
+}</string>
+         </property>
          <property name="text">
           <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/cerrar.png</normaloff>view/cerrar.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -135,12 +302,32 @@
         <height>90</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="font">
+          <font>
+           <family>DejaVu Sans</family>
+           <pointsize>19</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>input</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
     <item>
@@ -151,12 +338,24 @@
         <height>110</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>output</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
     <item>
@@ -166,6 +365,9 @@
         <width>450</width>
         <height>100</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -197,8 +399,35 @@
            <height>80</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+}
+
+QPushButton:hover{
+border:0px;
+border-radius:20px;
+background-color:rgb(139, 175, 191);
+}</string>
+         </property>
          <property name="text">
-          <string>rehacer</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/redo.png</normaloff>view/redo.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="shortcut">
+          <string/>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -210,8 +439,35 @@
            <height>80</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+}
+
+QPushButton:hover{
+border:0px;
+border-radius:20px;
+background-color:rgb(139, 175, 191);
+}</string>
+         </property>
          <property name="text">
-          <string>deshacer</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/undo.png</normaloff>view/undo.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="shortcut">
+          <string/>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -223,8 +479,21 @@
            <height>80</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border-radius:20px;
+border: 1px solid rgb(255, 255, 255);
+color:rgb(255,255,255);
+}
+
+QPushButton:hover{
+border:0px;
+border-radius:20px;
+background-color:rgb(255, 0, 0);
+}</string>
+         </property>
          <property name="text">
-          <string>limpiar</string>
+          <string>CLEAR</string>
          </property>
         </widget>
        </item>
@@ -236,8 +505,32 @@
            <height>80</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+border:0px;
+border-radius:20px;
+}
+
+QPushButton:hover{
+border:0px;
+background-color:rgb(139, 175, 191);
+}</string>
+         </property>
          <property name="text">
-          <string>borrar</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/borrar.png</normaloff>view/borrar.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -251,6 +544,9 @@
         <width>450</width>
         <height>100</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -294,7 +590,17 @@ QPushButton:hover {
 }</string>
          </property>
          <property name="text">
-          <string>(__)</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/parentesis.png</normaloff>view/parentesis.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -405,6 +711,9 @@ QPushButton:hover {
         <height>100</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -447,7 +756,17 @@ QPushButton:hover {
 }</string>
          </property>
          <property name="text">
-          <string>{__}</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/llaves.png</normaloff>view/llaves.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -558,6 +877,9 @@ QPushButton:hover {
         <height>100</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -600,7 +922,17 @@ QPushButton:hover {
 }</string>
          </property>
          <property name="text">
-          <string>[__]</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/corchetes.png</normaloff>view/corchetes.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -717,6 +1049,9 @@ QPushButton:hover {
         <height>100</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:0px;</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -752,6 +1087,7 @@ QPushButton:hover {
     background-color: rgb(26, 30, 39);
     border-radius: 15px;
     color: rgb(54, 105, 110);
+	font: 48pt &quot;DejaVu Sans&quot;;
 }
 
 QPushButton:hover {
@@ -759,7 +1095,17 @@ QPushButton:hover {
 }</string>
          </property>
          <property name="text">
-          <string>^</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>view/pow.png</normaloff>view/pow.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>40</width>
+           <height>40</height>
+          </size>
          </property>
         </widget>
        </item>
